# segmenter-svc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  sample_event.json  wsgi.py
app/: Dockerfile  pyproject.toml  setup.py
app/deploy/tools/: server
aws_lambda/: segmentation_handler.py
aws_lambda/scripts/: build_lambda.sh
deploy/tools/: dev_server  dev_server.sh
nginx/: nginx.conf
segmenter/: __init__.py  routes.py  segmenter.py
